@@ -1,4 +1,4 @@
-/*	$NetBSD: mpt_pci.c,v 1.10 2006/11/16 01:33:09 christos Exp $	*/
+/*	$NetBSD: mpt_pci.c,v 1.10.2.1 2007/07/30 20:02:32 liamjfoy Exp $	*/
 
 /*
  * Copyright (c) 2003 Wasabi Systems, Inc.
@@ -36,13 +36,17 @@
  */
 
 /*
+ * Additional contributions by Garrett D'Amore on behalf of TELES AG.
+ */
+
+/*
  * mpt_pci.c:
  *
  * NetBSD PCI-specific routines for LSI Fusion adapters.
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: mpt_pci.c,v 1.10 2006/11/16 01:33:09 christos Exp $");
+__KERNEL_RCSID(0, "$NetBSD: mpt_pci.c,v 1.10.2.1 2007/07/30 20:02:32 liamjfoy Exp $");
 
 #include <dev/ic/mpt.h>			/* pulls in all headers */
 
@@ -71,74 +75,47 @@ struct mpt_pci_softc {
 	pcireg_t sc_pci_pmcsr;
 };
 
-static void	mpt_pci_link_peer(mpt_softc_t *);
-static void	mpt_pci_read_config_regs(mpt_softc_t *);
-static void	mpt_pci_set_config_regs(mpt_softc_t *);
-
 #define	MPP_F_FC	0x01	/* Fibre Channel adapter */
 #define	MPP_F_DUAL	0x02	/* Dual port adapter */
 
 static const struct mpt_pci_product {
 	pci_vendor_id_t		mpp_vendor;
 	pci_product_id_t	mpp_product;
-	int			mpp_flags;
-	const char		*mpp_name;
 } mpt_pci_products[] = {
-	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_1030,
-	  MPP_F_DUAL,
-	  "LSI Logic 53c1030 Ultra320 SCSI" },
-
-	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_FC909,
-	  MPP_F_FC,
-	  "LSI Logic FC909 FC Adapter" },
-	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_FC909A,
-	  MPP_F_FC,
-	  "LSI Logic FC909A FC Adapter" },
-	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_FC929,
-	  MPP_F_FC | MPP_F_DUAL,
-	  "LSI Logic FC929 FC Adapter" },
-	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_FC929_1,
-	  MPP_F_FC | MPP_F_DUAL,
-	  "LSI Logic FC929 FC Adapter" },
-	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_FC919,
-	  MPP_F_FC,
-	  "LSI Logic FC919 FC Adapter" },
-	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_FC919_1,
-	  MPP_F_FC,
-	  "LSI Logic FC919 FC Adapter" },
-	{ PCI_VENDOR_SYMBIOS,   PCI_PRODUCT_SYMBIOS_FC929X,
-	  MPP_F_FC | MPP_F_DUAL,
-	  "LSI Logic FC929X FC Adapter" },
-	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_FC919X,
-	  MPP_F_FC,
-	  "LSI Logic FC919X FC Adapter" },
-
-	{ 0,			0,
-	  0,
-	  NULL },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_1030 },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_FC909 },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_FC909A },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_FC929 },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_FC929_1 },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_FC919 },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_FC919_1},
+	{ PCI_VENDOR_SYMBIOS,   PCI_PRODUCT_SYMBIOS_FC929X },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_FC919X },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_FC929X },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_FC939X },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_FC949X },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_SAS1064 },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_SAS1064A },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_SAS1064E },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_SAS1066 },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_SAS1066E },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_SAS1068 },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_SAS1078 },
+	{ PCI_VENDOR_SYMBIOS,	PCI_PRODUCT_SYMBIOS_SAS1068E },
+	{ 0,			0 }
 };
 
-static const struct mpt_pci_product *
-mpt_pci_lookup(const struct pci_attach_args *pa)
-{
-	const struct mpt_pci_product *mpp;
-
-	for (mpp = mpt_pci_products; mpp->mpp_name != NULL; mpp++) {
-		if (PCI_VENDOR(pa->pa_id) == mpp->mpp_vendor &&
-		    PCI_PRODUCT(pa->pa_id) == mpp->mpp_product)
-			return (mpp);
-	}
-	return (NULL);
-}
-
 static int
-mpt_pci_match(struct device *parent, struct cfdata *cf,
-    void *aux)
+mpt_pci_match(struct device *parent, struct cfdata *cf, void *aux)
 {
 	struct pci_attach_args *pa = aux;
+	const struct mpt_pci_product *mpp;
 
-	if (mpt_pci_lookup(pa) != NULL)
-		return (1);
+	for (mpp = mpt_pci_products; mpp->mpp_vendor != 0; mpp++) {
+		if (PCI_VENDOR(pa->pa_id) == mpp->mpp_vendor &&
+		    PCI_PRODUCT(pa->pa_id) == mpp->mpp_product)
+			return (1);
+	}
 
 	return (0);
 }
@@ -149,32 +126,23 @@ mpt_pci_attach(struct device *parent, struct device *self, void *aux)
 	struct mpt_pci_softc *psc = (void *) self;
 	mpt_softc_t *mpt = &psc->sc_mpt;
 	struct pci_attach_args *pa = aux;
-	const struct mpt_pci_product *mpp;
 	pci_intr_handle_t ih;
 	const char *intrstr;
 	pcireg_t reg, memtype;
 	bus_space_tag_t memt;
 	bus_space_handle_t memh;
 	int memh_valid;
+	char devinfo[200];
 
-	mpp = mpt_pci_lookup(pa);
-	if (mpp == NULL) {
-		printf("\n");
-		panic("mpt_pci_attach");
-	}
+	pci_devinfo(pa->pa_id, 0, 0, devinfo, sizeof (devinfo));
 
-	if (mpp->mpp_flags & MPP_F_FC) {
-		mpt->is_fc = 1;
-		aprint_naive(": Fibre Channel controller\n");
-	} else
-		aprint_naive(": SCSI controller\n");
-	aprint_normal(": %s\n", mpp->mpp_name);
+	aprint_naive("\n");
+	aprint_normal(": %s\n", devinfo);
 
 	psc->sc_pc = pa->pa_pc;
 	psc->sc_tag = pa->pa_tag;
 
 	mpt->sc_dmat = pa->pa_dmat;
-	mpt->sc_set_config_regs = mpt_pci_set_config_regs;
 
 	/*
 	 * Map the device.
@@ -248,24 +216,6 @@ mpt_pci_attach(struct device *parent, struct device *self, void *aux)
 		return;
 	}
 
-	/*
-	 * Save the PCI config register values.
-	 *
-	 * Hard resets are known to screw up the BAR for diagnostic
-	 * memory accesses (Mem1).
-	 *
-	 * Using Mem1 is know to make the chip stop responding to
-	 * configuration cycles, so we need to save it now.
-	 */
-	mpt_pci_read_config_regs(mpt);
-
-	/*
-	 * If we're a dual-port adapter, try to find our peer.  We
-	 * need to fix his PCI config registers, too.
-	 */
-	if (mpp->mpp_flags & MPP_F_DUAL)
-		mpt_pci_link_peer(mpt);
-
 	/* Initialize the hardware. */
 	if (mpt_init(mpt, MPT_DB_INIT_HOST) != 0) {
 		/* Error message already printed. */
@@ -279,102 +229,3 @@ mpt_pci_attach(struct device *parent, struct device *self, void *aux)
 CFATTACH_DECL(mpt_pci, sizeof(struct mpt_pci_softc),
     mpt_pci_match, mpt_pci_attach, NULL, NULL);
 
-/*
- * Find and remember our peer PCI function on a dual-port device.
- */
-static void
-mpt_pci_link_peer(mpt_softc_t *mpt)
-{
-	extern struct cfdriver mpt_cd;
-
-	struct mpt_pci_softc *peer_psc, *psc = (void *) mpt;
-	struct device *dev;
-	int unit, b, d, f, peer_b, peer_d, peer_f;
-
-	pci_decompose_tag(psc->sc_pc, psc->sc_tag, &b, &d, &f);
-
-	for (unit = 0; unit < mpt_cd.cd_ndevs; unit++) {
-		if (unit == device_unit(&mpt->sc_dev))
-			continue;
-		dev = device_lookup(&mpt_cd, unit);
-		if (dev == NULL)
-			continue;
-		if (device_parent(&mpt->sc_dev) != device_parent(dev))
-			continue;
-		/*
-		 * If we have the same parent, we know the other one
-		 * is attached with mpt_pci.
-		 */
-		peer_psc = (void *) dev;
-		if (peer_psc->sc_pc != psc->sc_pc)
-			continue;
-		pci_decompose_tag(peer_psc->sc_pc, peer_psc->sc_tag,
-		    &peer_b, &peer_d, &peer_f);
-		if (peer_b == b && peer_d == d) {
-			if (mpt->verbose)
-				mpt_prt(mpt, "linking with peer: %s",
-				    peer_psc->sc_mpt.sc_dev.dv_xname);
-			mpt->mpt2 = (mpt_softc_t *) peer_psc;
-			peer_psc->sc_mpt.mpt2 = mpt;
-			return;
-		}
-	}
-}
-
-/*
- * Save the volatile PCI configuration registers.
- */
-static void
-mpt_pci_read_config_regs(mpt_softc_t *mpt)
-{
-	struct mpt_pci_softc *psc = (void *) mpt;
-
-	psc->sc_pci_csr = pci_conf_read(psc->sc_pc, psc->sc_tag,
-	    PCI_COMMAND_STATUS_REG);
-	psc->sc_pci_bhlc = pci_conf_read(psc->sc_pc, psc->sc_tag,
-	    PCI_BHLC_REG);
-	psc->sc_pci_io_bar = pci_conf_read(psc->sc_pc, psc->sc_tag,
-	    PCI_MAPREG_START);
-	psc->sc_pci_mem0_bar[0] = pci_conf_read(psc->sc_pc, psc->sc_tag,
-	    PCI_MAPREG_START+0x04);
-	psc->sc_pci_mem0_bar[1] = pci_conf_read(psc->sc_pc, psc->sc_tag,
-	    PCI_MAPREG_START+0x08);
-	psc->sc_pci_mem1_bar[0] = pci_conf_read(psc->sc_pc, psc->sc_tag,
-	    PCI_MAPREG_START+0x0c);
-	psc->sc_pci_mem1_bar[1] = pci_conf_read(psc->sc_pc, psc->sc_tag,
-	    PCI_MAPREG_START+0x10);
-	psc->sc_pci_rom_bar = pci_conf_read(psc->sc_pc, psc->sc_tag,
-	    PCI_MAPREG_ROM);
-	psc->sc_pci_int = pci_conf_read(psc->sc_pc, psc->sc_tag,
-	    PCI_INTERRUPT_REG);
-	psc->sc_pci_pmcsr = pci_conf_read(psc->sc_pc, psc->sc_tag, 0x44);
-}
-
-/*
- * Restore the volatile PCI configuration registers.
- */
-static void
-mpt_pci_set_config_regs(mpt_softc_t *mpt)
-{
-	struct mpt_pci_softc *psc = (void *) mpt;
-
-	pci_conf_write(psc->sc_pc, psc->sc_tag, PCI_COMMAND_STATUS_REG,
-	    psc->sc_pci_csr);
-	pci_conf_write(psc->sc_pc, psc->sc_tag, PCI_BHLC_REG,
-	    psc->sc_pci_bhlc);
-	pci_conf_write(psc->sc_pc, psc->sc_tag, PCI_MAPREG_START,
-	    psc->sc_pci_io_bar);
-	pci_conf_write(psc->sc_pc, psc->sc_tag, PCI_MAPREG_START+0x04,
-	    psc->sc_pci_mem0_bar[0]);
-	pci_conf_write(psc->sc_pc, psc->sc_tag, PCI_MAPREG_START+0x08,
-	    psc->sc_pci_mem0_bar[1]);
-	pci_conf_write(psc->sc_pc, psc->sc_tag, PCI_MAPREG_START+0x0c,
-	    psc->sc_pci_mem1_bar[0]);
-	pci_conf_write(psc->sc_pc, psc->sc_tag, PCI_MAPREG_START+0x10,
-	    psc->sc_pci_mem1_bar[1]);
-	pci_conf_write(psc->sc_pc, psc->sc_tag, PCI_MAPREG_ROM,
-	    psc->sc_pci_rom_bar);
-	pci_conf_write(psc->sc_pc, psc->sc_tag, PCI_INTERRUPT_REG,
-	    psc->sc_pci_int);
-	pci_conf_write(psc->sc_pc, psc->sc_tag, 0x44, psc->sc_pci_pmcsr);
-}
